--- a/threeOrgs/docker-compose-simple-3org.yaml
+++ b/threeOrgs/docker-compose-simple-3org.yaml
@@ -1,12 +1,11 @@
-version: '2'
+version: '3'
 
 services:
-  orderer.example.com:
-    container_name: orderer.example.com
+  orderer:
     image: hyperledger/fabric-orderer
     environment:
       - FABRIC_LOGGING_SPEC=debug
-      - ORDERER_GENERAL_LISTENADDRESS=orderer.example.com
+      - ORDERER_GENERAL_LISTENADDRESS=orderer
       - ORDERER_GENERAL_BOOTSTRAPMETHOD=file
       - ORDERER_GENERAL_BOOTSTRAPFILE=orderer.block
       - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
@@ -16,22 +15,19 @@ services:
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric
     command: orderer
     volumes:
-      - ./msp/OrdererMSP:/etc/hyperledger/msp
+      - ./msp/Orderer:/etc/hyperledger/msp
       - ./channel-artifacts/orderer.block:/etc/hyperledger/fabric/orderer.block
     ports:
       - 7050:7050
-  peer0.org1.example.com:
-    container_name: peer0.org1.example.com
-    image: hyperledger/fabric-peer
+  org1:
+    image: hyperledger/fabric-peer:2.2
     environment:
-      - CORE_PEER_ID=peer0.org1.example.com
-      - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.example.com:7051
+      - CORE_PEER_ID=org1
+      - CORE_PEER_ADDRESS=org1:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=org1:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
-      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - FABRIC_LOGGING_SPEC=DEBUG
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/msp
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.example.com:7051
 
     volumes:
         - /var/run/:/host/var/run/
@@ -45,45 +41,129 @@ services:
       - orderer
 
   cli1:
-    container_name: cli1
-    image: hyperledger/fabric-tools
+    image: hyperledger/fabric-tools:2.2
     tty: true
     environment:
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - FABRIC_LOGGING_SPEC=DEBUG
-      - CORE_PEER_ID=cli
-      - CORE_PEER_ADDRESS=peer:7051
-      - CORE_PEER_LOCALMSPID=DEFAULT
+      - CORE_PEER_ID=cli1
+      - CORE_PEER_ADDRESS=org1:7051
+      - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/msp
     working_dir: /opt/gopath/src/chaincodedev
     command: /bin/bash -c './script.sh'
     volumes:
         - /var/run/:/host/var/run/
-        - ./msp:/etc/hyperledger/msp
-        - ./../chaincode:/opt/gopath/src/chaincodedev/chaincode
+        - ./msp/Org1MSP:/etc/hyperledger/msp
         - ./:/opt/gopath/src/chaincodedev/
     depends_on:
       - orderer
-      - peer0.org1.example.com
-
-  chaincode:
-    container_name: chaincode
-    image: hyperledger/fabric-nodeenv:2.2
-    tty: true
+      - org1
+    
+  org2:
+    image: hyperledger/fabric-peer:2.2
     environment:
-      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+      - CORE_PEER_ID=org2
+      - CORE_PEER_ADDRESS=org2:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=org2:7051
+      - CORE_PEER_LOCALMSPID=Org2MSP
       - FABRIC_LOGGING_SPEC=DEBUG
-      - CORE_PEER_ID=abstore
-      - CORE_PEER_ADDRESS=peer:7051
-      - CORE_PEER_LOCALMSPID=DEFAULT
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/msp
-    working_dir: /opt/gopath/src/chaincode
-    command: /bin/sh -c 'sleep 6000000'
+
     volumes:
         - /var/run/:/host/var/run/
-        - ./msp:/etc/hyperledger/msp
-        - ./chaincode:/opt/gopath/src/chaincode
+        - ./msp/Org2MSP:/etc/hyperledger/msp
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    command: peer node start --peer-chaincodedev=true
+    ports:
+      - 9051:7051
+      - 9053:7053
     depends_on:
       - orderer
-      - peer0.org1.example.com
+
+  cli2:
+    image: hyperledger/fabric-tools:2.2
+    tty: true
+    environment:
+      - GOPATH=/opt/gopath
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+      - FABRIC_LOGGING_SPEC=DEBUG
+      - CORE_PEER_ID=cli2
+      - CORE_PEER_ADDRESS=org2:7051
+      - CORE_PEER_LOCALMSPID=Org2MSP
+      - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/msp
+    working_dir: /opt/gopath/src/chaincodedev
+    command: /bin/bash -c './script.sh'
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./msp/Org2MSP:/etc/hyperledger/msp
+        - ./:/opt/gopath/src/chaincodedev/
+    depends_on:
+      - orderer
+      - org2
+      - cli1 #wait for cli1 to generate myc.block
+
+  org3:
+    image: hyperledger/fabric-peer:2.2
+    environment:
+      - CORE_PEER_ID=org3
+      - CORE_PEER_ADDRESS=org3:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=org3:7051
+      - CORE_PEER_LOCALMSPID=Org3MSP
+      - FABRIC_LOGGING_SPEC=DEBUG
+      - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/msp
+
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./msp/Org3MSP:/etc/hyperledger/msp
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    command: peer node start --peer-chaincodedev=true
+    ports:
+      - 11051:7051
+      - 11053:7053
+    depends_on:
+      - orderer
+
+  cli3:
+    image: hyperledger/fabric-tools:2.2
+    tty: true
+    environment:
+      - GOPATH=/opt/gopath
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+      - FABRIC_LOGGING_SPEC=DEBUG
+      - CORE_PEER_ID=cli3
+      - CORE_PEER_ADDRESS=org3:7051
+      - CORE_PEER_LOCALMSPID=Org3MSP
+      - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/msp
+    working_dir: /opt/gopath/src/chaincodedev
+    command: /bin/bash -c './script.sh'
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./msp/Org3MSP:/etc/hyperledger/msp
+        - ./:/opt/gopath/src/chaincodedev/
+    depends_on:
+      - orderer
+      - org3
+      - cli1 # wait for cli1 to generate myc.block
+
+  # chaincode:
+  #   container_name: chaincode
+  #   image: hyperledger/fabric-nodeenv:2.2
+  #   tty: true
+  #   environment:
+  #     - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+  #     - FABRIC_LOGGING_SPEC=DEBUG
+  #     - CORE_PEER_ID=abstore
+  #     - CORE_PEER_ADDRESS=peer:7051
+  #     - CORE_PEER_LOCALMSPID=DEFAULT
+  #     - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/msp
+  #   working_dir: /opt/gopath/src/chaincode
+  #   command: /bin/sh -c 'sleep 6000000'
+  #   volumes:
+  #       - /var/run/:/host/var/run/
+  #       - ./msp:/etc/hyperledger/msp
+  #       - ./chaincode:/opt/gopath/src/chaincode
+  #   depends_on:
+  #     - orderer
+  #     - peer0.org1.example.com
