--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # Logs
 logs
-*.log
+**/*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+**/log.txt
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -102,3 +103,5 @@ dist
 
 # TernJS port file
 .tern-port
+
+**/*.tar.gz
