--- a/docker-compose-simple-3org.yaml
+++ b/docker-compose-simple-3org.yaml
@@ -28,7 +28,7 @@ services:
         image: hyperledger/fabric-peer:2.2
         environment:
             - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-            - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=iov-poc-ingress
+            - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=aml-ingress
             - CORE_PEER_ID=org1
             - CORE_PEER_ADDRESS=org1:7051
             - CORE_PEER_GOSSIP_EXTERNALENDPOINT=org1:7051
@@ -54,7 +54,7 @@ services:
         image: hyperledger/fabric-peer:2.2
         environment:
             - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-            - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=iov-poc-ingress
+            - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=aml-ingress
             - CORE_PEER_ID=org2
             - CORE_PEER_ADDRESS=org2:7051
             - CORE_PEER_GOSSIP_EXTERNALENDPOINT=org2:7051
@@ -79,7 +79,7 @@ services:
         image: hyperledger/fabric-peer:2.2
         environment:
             - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-            - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=iov-poc-ingress
+            - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=aml-ingress
             - CORE_PEER_ID=org3
             - CORE_PEER_ADDRESS=org3:7051
             - CORE_PEER_GOSSIP_EXTERNALENDPOINT=org3:7051
@@ -126,4 +126,4 @@ services:
 networks:
     default:
         external:
-            name: iov-poc-ingress
+            name: aml-ingress
